# sc-python-templates

./: .gitignore  CHANGES.rst  LICENSE  MANIFEST.in  README.rst  build.py  pyproject.toml  requirements.txt  sc-python-templates  setup.py
git-hooks/: pre-commit
requirements/: base.txt
sc_templates/: __init__.py  main.py  utils.py
sc_templates/analyzer/: __init__.py  main_analyzer.py
sc_templates/log/: __init__.py  log_worker.py
sc_templates/qt/: __init__.py  app.py
sc_templates/sample_config/: __init__.py
sc_templates/tests/: __init__.py
sc_templates/tests/sample_config/: default.yml
scripts/: setup-hooks.sh
tests/: __init__.py  test_config.py
